web-137-empty-state: fix icons z-index

--- a/wetmap/src/components/reusables/emptyState/style.module.scss
+++ b/wetmap/src/components/reusables/emptyState/style.module.scss
@@ -33,7 +33,7 @@
     color: white;
     background-color: var(--ssrc-site-selector-icon-background);
     position: absolute;
-    z-index: 10;
+    z-index: 2;
     border: 0.1rem #f9f9f9 solid;
 }
 
@@ -47,7 +47,7 @@
     position: absolute;
     top: -0.3rem;
     left: -0.75rem;
-    z-index: 5;
+    z-index: 1;
     scale: 0.9;
 }
 
@@ -61,6 +61,6 @@
     position: absolute;
     top: -0.3rem;
     right: -0.75rem;
-    z-index: 5;
+    z-index: 1;
     scale: 0.9;
 }
